header z-index fix

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ header{
     min-width: 900px;
     width: 100vw;
     background-color: white;
-    z-index: 1;
+    z-index: 2;
     border-bottom: 1px solid #b4d0e7;
 }
 
